Fix pdf viewer width issue when scrollbars are visible

--- a/src/scss/_sheet.scss
+++ b/src/scss/_sheet.scss
@@ -1,6 +1,7 @@
 .sheet {
   position: relative;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
   padding: 20px;
   background-color: #f0f0f0;
 }
